- Cast additionalVarBinds into ObjectIdentifier type at
  NotificationOriginator.sendNotification()
- Standard SNMPv3 Apps hardened to catch protocol-related exceptions and
  report them as errorIndication's.
- Catch and mute possible failure of getsockname(), that seems to happen 
  on Windows only so far.
- Memory leak fixed at oneliner cache of already configured targets.
- Fixes to ContextEngineId/ContextName support at the oneliner API: now
  both items should be passed to request PDU through *Cmd() request
  initiation method, the items of authData object should be used only for
  LCD configuration.
- Fix to outgoing queue processing order at socket transport. Now
  it's a FIFO discipline rather than LIFO.
- Fix to NotificationOriginator's additionalVarBinds parameter - it is
  not mandatory anymore with the oneliner API. Also additionalVarBinds
  defaulted value changed from None to () meaning no var-binds.
- Attempt to convert Windows style EOL into UNIX ones in MIB source
  modules appeared to be unnecessary and even destructive to modules
  data in some cases. So the convertion code removed altogether.
- Fix to isAccessAllowed() error handling at NotificationOriginator. System
  used to crash on access denied condition.
- Fix to NotificationOriginator to make it use system uptime and trap OID
  values from SNMP engine's instrumentation rather then from SNMP context.
- Fix a couple of bugs at MibTable* logic involved for table instances
  creation.
- Fix to Management Instrumentation code to handle cases of non-initialized
  or not-compliant-to-constraints Managed Objects Instances.
- Fix to Management Instrumentation code to make table row removal through
  SNMP working again. Wrong method (instumClone) was probed at terminal
  MIB nodes values instead of the right one (setValue).

Revision 4.2.3
--------------

- SECURITY FIX: USM subsystem did not verify securityLevel of a request
  to an authoritative SNMP engineinbound against auth/priv protocols